--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "theme-ui": "0.15.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
