--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.8.1",
     "@hackclub/meta": "^1.1.32",
     "@hackclub/theme": "^0.3.3",
+    "@heroicons/react": "^2.0.16",
+    "@icons-pack/react-simple-icons": "^7.1.0",
     "@mdx-js/loader": "^2.2.1",
     "@mdx-js/react": "^2.1.1",
     "@next/mdx": "^13.1.1",
