--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@mdx-js/loader": "^2.2.1",
     "@mdx-js/react": "^2.1.1",
     "@next/mdx": "^13.1.1",
+    "daisyui": "^2.51.3",
     "next": "^13.1.1",
     "react": "^18.2.0",
+    "react-daisyui": "^3.0.3",
     "react-dom": "^18.2.0",
     "theme-ui": "0.15.4"
   },
